Official Changelog for ephFrame PHP Framework
==============================================================================

# 2009-11-15 #
* changed code.ephigeniad.de to code.marceleichner.de
* CURL uses CONNECTTIMEOUT now

# 2009-11-04 #
* Form->addField accepts label = false in the attributes to disable label usage
* String::substitue does not use \p{L} unicode class for replacement anymore
* Rendering and View filename finding in View Class refactored
* Elements that are missing throwing exceptions now
* Removed Bug where view is rendered twice!
* Changed code.moresleep.net back to code.marceleichner.de
* Javascript helper loads external urls before local files
* Fixed bug in IndexedArray->rand when returning 1 random element

# 2009-10-21 #
* added beforeRedirect callback that is called on every component before redirect headers are send in the controller, note that afterRender is _not_ called when a redirect is called
* removed $glue parameter from File->append
* Model->toArray accepts first parameter with fieldnames in it that will be used in array creation

# 2009-10-11 #
* ->unbind('all') removes all bindings from a model
* Directories can be created by simply calling ->create on them
* Image->resizeTo renamed to resize and Image->stretchResizeTo will be renamed to resizeCrop
* Dir->delete can delete directories recursivly

# 2009-10-08 #
* Fixed function call with reference in HTTPRequest and Cookie Class
* Added Paginator Helper that makes pagintion easier to use!
* Added and changed docu for HTML Helper
* Fixed String::prepend to use conditional string correctly
* moved ephFrame path decision from index.php ino ephFrame.php
* Added AppHelper class with various callbacks
* All basic components extend from AppComponent now
+ Added /console/console.php script that loads console tasks
* Helpers now can access controller by $this->controller if set
* HTML Helper uses $theme from controller to link images right

# 2009-09-17 #